--- a/package.json
+++ b/package.json
@@ -8,27 +8,35 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "start": "next start -p 3000",
-    "lint": "eslint .",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "format": "prettier . --write",
+    "format:check": "prettier . --check",
+    "lint:format": "pnpm lint:fix && pnpm format",
     "test": "vitest",
     "e2e": "playwright test",
     "lhci:collect": "lhci collect --url=http://localhost:3000 --numberOfRuns=1 || true",
     "lhci:assert": "lhci assert || true"
   },
   "dependencies": {
+    "@eslint/eslintrc": "^3",
+    "chart.js": "4.4.3",
     "next": "15.4.7",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "zod": "3.23.8",
-    "chart.js": "4.4.3"
+    "zod": "3.23.8"
   },
   "devDependencies": {
+    "@lhci/cli": "0.13.0",
+    "@playwright/test": "1.48.0",
     "@types/node": "20.11.30",
     "@types/react": "18.2.66",
-    "eslint": "8.57.0",
-    "typescript": "5.4.5",
-    "vitest": "3.0.5",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.6",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.6.2",
-    "@playwright/test": "1.48.0",
-    "@lhci/cli": "0.13.0"
+    "typescript": "5.4.5",
+    "vitest": "3.0.5"
   }
 }
