--- a/package.json
+++ b/package.json
@@ -21,22 +21,24 @@
   "dependencies": {
     "@eslint/eslintrc": "^3",
     "chart.js": "4.4.3",
-    "next": "15.4.7",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "next": "15.5.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
-    "@lhci/cli": "0.13.0",
-    "@playwright/test": "1.48.0",
-    "@types/node": "20.11.30",
-    "@types/react": "18.2.66",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "prettier": "^3.6.2",
+    "typescript": "^5",
+    "@lhci/cli": "0.13.0",
+    "@playwright/test": "1.48.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "prettier": "^3.6.2",
-    "typescript": "5.4.5",
     "vitest": "3.0.5"
   }
 }
